<resources>
    <string name="app_name">Fletcher Kids\' Games</string>
    <string name="answer_3">Answer 3</string>
    <string name="answer_2">Answer 2</string>
    <string name="answer_1">Answer 1</string>
    <string name="_5_3">5 + 3</string>
    <string name="enter_your_answer">Enter your answer</string>
    <string name="submit_answer">Submit Answer</string>
    <string name="_1_00">1:00</string>
    <string name="scores">Scores</string>
    <string name="pick_your_game">Pick a game</string>
    <string name="math_game">Math Game</string>
    <string name="x">Close</string>
    <string name="score_0">Score: 0</string>
    <string name="start">Start</string>
    <string name="close">Close</string>
    <string name="enter_timer_duration">Enter timer duration</string>
    <string name="bounds">Enter the max size of each number</string>
    <string name="start_playing">Start Playing!</string>
    <string name="hard">Hard</string>
    <string name="medium">Medium</string>
    <string name="easy">Easy</string>
    <string name="timer">Timer:</string>
    <string name="closeGame">Close Game</string>
    <string name="todo">TODO</string>
</resources>