<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">



    <TextView
        android:id="@+id/timerTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_1_00"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/problemTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/_5_3"
        android:textAlignment="center"
        android:textSize="36sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonAnswer1"
            android:layout_width="wrap_content"
            android:layout_height="86dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:text="@string/answer_1"
            android:textSize="24sp"
            android:onClick="onAnswerButtonClick"/>

        <Button
            android:id="@+id/buttonAnswer2"
            android:layout_width="wrap_content"
            android:layout_height="86dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:text="@string/answer_2"
            android:textSize="24sp"
            android:onClick="onAnswerButtonClick"/>

        <Button
            android:id="@+id/buttonAnswer3"
            android:layout_width="wrap_content"
            android:layout_height="86dp"
            android:layout_weight="1"
            android:text="@string/answer_3"
            android:textSize="24sp"
            android:onClick="onAnswerButtonClick"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/scoresTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scores"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/scoresListTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="18sp" />

    </LinearLayout>

    <!--linear layout containing a text view for the current score-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/scoreTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/score_0"
                android:textSize="24sp" />

            <Button
                android:id="@+id/closeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:theme="@style/SecondaryButton"
                android:text="@string/x"
                android:textSize="14sp"
                android:onClick="onCloseButtonClick"/>
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>

