<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/startButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/timerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1_00"
            android:layout_weight="2"
            android:textAlignment="center"
            android:textSize="24sp" />
        <Button
            android:id="@+id/closeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/close"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:columnCount="2"
        android:rowCount="4"
        android:alignmentMode="alignBounds"
        android:padding="16dp">

        <ImageButton
            android:id="@+id/card1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="8dp"
            android:src="@drawable/card_back"
            android:scaleType="fitXY"
            android:onClick="flipCard"/>

        <ImageButton
            android:id="@+id/card2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="8dp"
            android:src="@drawable/card_back"
            android:scaleType="fitXY"

            android:onClick="flipCard"/>

        <ImageButton
            android:id="@+id/card3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="8dp"
            android:src="@drawable/card_back"
            android:scaleType="fitXY"

            android:onClick="flipCard"/>

        <ImageButton
            android:id="@+id/card4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="8dp"
            android:src="@drawable/card_back"
            android:scaleType="fitXY"

            android:onClick="flipCard"/>

        <ImageButton
            android:id="@+id/card5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="8dp"
            android:src="@drawable/card_back"
            android:scaleType="fitXY"

            android:onClick="flipCard"/>

        <ImageButton
            android:id="@+id/card6"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="8dp"
            android:src="@drawable/card_back"
            android:scaleType="fitXY"

            android:onClick="flipCard"/>

        <ImageButton
            android:id="@+id/card7"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="8dp"
            android:src="@drawable/card_back"
            android:scaleType="fitXY"

            android:onClick="flipCard"/>

        <ImageButton
            android:id="@+id/card8"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_margin="8dp"
            android:src="@drawable/card_back"
            android:scaleType="fitXY"

            android:onClick="flipCard"/>

    </GridLayout>

</LinearLayout>